# Pygame3d

./: README.md  pyproject.toml  required_tool
pygame3d/: __init__.py
pygame3d-generic/core/: camera.py  entity.py
pygame3d-generic/network/: client.py
pygame3d-generic/render/: hud.py  scene.py
pygame3d-generic/world/: procedural.py
pygame3d/core/: __init__.py  physics.py  projectile.py
pygame3d/network/: __init__.py  server.py
pygame3d/render/: __init__.py  overlay.py  particles.py  primitives.py
pygame3d/world/: __init__.py  road.py
pygame3d_generic/ui/: __init__.py
pygame3d_generic/world/: volume.py
tests/: test_core.py
