[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame3d-generic"
version = "0.3.0"
description = "Generic Pygame + OpenGL 3-D game engine library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "pygame", "opengl", "3d", "game", "game-engine",
    "game-dev", "engine", "physics", "networking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pygame>=2.5",
    "PyOpenGL>=3.1",
]

[project.optional-dependencies]
accelerate = ["PyOpenGL-accelerate>=3.1"]
dev        = ["pytest", "black", "ruff", "build", "twine"]

[project.urls]
Homepage   = "https://github.com/RentoCoder-KOSIN/Pygame3d"
Repository = "https://github.com/RentoCoder-KOSIN/Pygame3d"
Issues     = "https://github.com/RentoCoder-KOSIN/Pygame3d/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["pygame3d-generic*"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
